statum-macros/tests/ui/invalid_machine_no_state_generic.stderr
error: Error: machine `Machine` is missing its `#[state]` generic.
       Found: `struct Machine { ... }`
       Expected: `struct Machine<WorkflowState> { ... }`
       Fix: declare `Machine<State>` where `State` is the local `#[state]` enum.
  --> tests/ui/invalid_machine_no_state_generic.rs:15:8
   |
15 | struct Machine {
   |        ^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_machine_no_state_generic.rs:17:2
   |
17 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_machine_no_state_generic.rs`
